--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "vite-react-typescript-starter",
+  "name": "codify-dolboor",
   "private": true,
-  "version": "0.0.0",
+  "version": "1",
+  "author": "KanybekovMaksat",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -14,11 +15,7 @@
     "@supabase/supabase-js": "^2.57.4",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^7.13.0",
-    "react-slick": "^0.31.0",
-    "react-syntax-highlighter": "^16.1.0",
-    "slick-carousel": "^1.8.1"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
